--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing2.html" class="link">Supervised ML: Regression</a></h3>
+										<h3><a href="landing2.html" class="link">Regression & Classification</a></h3>
 										<p>Restaurant Ratings Prediction</p>
+										<p>Heart Failure Classifier</p>
 										<p>House Prices Prediction</p>
-										<p>Car Prices Prediction</p>
 									</header>
 								</article>
 								<article>
@@ -87,11 +87,9 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing3.html" class="link">Supervised ML: Classification</a></h3>
-										<p>Heart Failure Classifier</p>
-										<i>Artificial Neural Networks:</i>
-										<p>Nature Scene Classifier</p>
-										<p>Dog Breed Classifier</p>
+										<h3><a href="landing4.html" class="link">Natural Language Processing</a></h3>
+										<p>InfoBot (Sonity AI Chatbot)</p>
+										<p>Sentistranger (Sentiment Analysis)</p>
 									</header>
 								</article>
 								<article>
@@ -99,9 +97,9 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing4.html" class="link">Natural Language Processing</a></h3>
-										<p>InfoBot (Sonity AI Chatbot)</p>
-										<p>Sentistranger (Sentiment Analysis)</p>
+										<h3><a href="landing3.html" class="link">Computer Vision</a></h3>
+										<p>Nature Scene Classifier</p>
+										<p>Dog Breed Classifier</p>
 									</header>
 								</article>
 								<article>
