--- a/landing2.html
+++ b/landing2.html
@@ -50,7 +50,7 @@
 							<div class="content">
 								<p>This section contains projects that focus on analyzing, preparing and
 									utilization of data with various machine learning algorithms to build
-									regression models.
+									regression and classification models.
 								</p>
 							</div>
 						</div>
@@ -66,8 +66,8 @@
 										<h2>Projects</h2>
 										<ul>
 											<li>Restaurant Ratings Prediction</li>
+											<li>Heart Failure Classifier</li>
 											<li>House Prices Prediction</li>
-											<li>Car Prices Prediction</li>
 										</ul>
 									</header>
 								</div>
@@ -101,6 +101,31 @@
 									</div>
 								</section>
 								<section>
+									<a href="https://github.com/Davidsonity/Heart_Failure" class="image">
+										<img src="https://user-images.githubusercontent.com/96771321/189802385-c30359f6-3a21-4aae-b105-4ab51bc30a19.png" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Heart Failure Classifier</h3>
+											</header>
+											<p>
+												The Heart Failure Prediction project aims to develop a machine learning model for
+												accurately predicting heart failure in patients. By analyzing a dataset of 299 patients'
+												medical records, including 13 clinical features, the project explores various ML algorithms
+												and techniques. The best-performing model is selected based on evaluation metrics like recall
+												and F-score. The project's repository contains a Jupyter Notebook (`Heart_Failure.ipynb`) that
+												provides code, documentation, and step-by-step instructions. The project strives to provide
+												healthcare professionals with a reliable tool to improve patient outcomes and intervention
+												decisions.
+											</p>
+											<ul class="actions">
+												<li><a href="https://github.com/Davidsonity/Heart_Failure" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
 									<a href="https://github.com/Davidsonity/House-Prices-Prediction" class="image">
 										<img src="https://camo.githubusercontent.com/9de3e2baa949b4ecc71147533765e07ecfa33a58333aed57f57db765328ade4f/68747470733a2f2f73746f726167652e676f6f676c65617069732e636f6d2f6b6167676c652d636f6d7065746974696f6e732f6b6167676c652f353430372f6d656469612f686f7573657362616e6e65722e706e67" alt="" data-position="top center" />
 									</a>
@@ -121,30 +146,6 @@
 											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/House-Prices-Prediction" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="https://github.com/Davidsonity/Car-Price-Prediction" class="image">
-										<img src="https://user-images.githubusercontent.com/96771321/214902051-e184f7e2-d64e-4cb0-b369-cdc0faa6699e.jpg" alt="" data-position="25% 25%" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Car Prices Prediction</h3>
-											</header>
-											<p>
-												The Car Price Prediction project aims to develop a regression model to predict the
-												selling price of cars based on their characteristics. The project involves analyzing
-												a dataset of car sale adverts, performing data exploration and preprocessing,
-												conducting feature engineering, training regression models, and evaluating their
-												performance. The ultimate goal is to create an accurate model that can assist in
-												predicting car prices, providing valuable insights for car sellers, buyers, and
-												industry professionals.
-											</p>
-											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/Car-Price-Prediction" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
