--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing2.html" class="link">Regression & Classification</a></h3>
-										<p>Restaurant Ratings Prediction</p>
-										<p>Heart Failure Classifier</p>
-										<p>House Prices Prediction</p>
+										<h3><a href="landing2.html" class="link">Regression | Classification</a></h3>
+										<p>DineRate</p>
+										<p>HeartGuard</p>
+										<p>HomeValueQuest</p>
 									</header>
 								</article>
 								<article>
@@ -98,8 +98,8 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing3.html" class="link">Computer Vision</a></h3>
-										<p>Nature Scene Classifier</p>
-										<p>Dog Breed Classifier</p>
+										<p>NatureVision</p>
+										<p>BreedSpotter</p>
 									</header>
 								</article>
 								<article>
