--- a/landing2.html
+++ b/landing2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Emuejevoke's Supervised ML: Regression Portfolio</title>
+		<title>Emuejevoke's Regression and Classification</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,7 +45,7 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Supervised ML: Regression</h1>
+								<h1>Regression and Classification</h1>
 							</header>
 							<div class="content">
 								<p>This section contains projects that focus on analyzing, preparing and
@@ -65,9 +65,9 @@
 									<header class="major">
 										<h2>Projects</h2>
 										<ul>
-											<li>Restaurant Ratings Prediction</li>
-											<li>Heart Failure Classifier</li>
-											<li>House Prices Prediction</li>
+											<li>DineRate</li>
+											<li>HeartGuard</li>
+											<li>HomeValueQuest</li>
 										</ul>
 									</header>
 								</div>
@@ -76,16 +76,16 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="https://github.com/Davidsonity/Restaurants-Rating-Prediction" class="image">
+									<a href="https://github.com/Davidsonity/DineRate" class="image">
 										<img src="https://user-images.githubusercontent.com/96771321/191105903-96e9a07f-2a31-402c-953b-e078e863da20.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Restaurant Ratings Prediction</h3>
+												<h3>DineRate</h3>
 											</header>
 											<p>
-												The Restaurants Rating Prediction project is a machine learning application that
+												DineRate is a machine learning application that
 												predicts the ratings of restaurants in Bangalore. By leveraging a dataset obtained
 												from Zomato, the project trains a predictive model that takes into account factors
 												such as location, cuisine, restaurant type, average cost, and user reviews. The
@@ -95,22 +95,22 @@
 												to input restaurant details and receive predicted ratings remotely.
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/Restaurants-Rating-Prediction" class="button">Learn more</a></li>
+												<li><a href="https://github.com/Davidsonity/DineRate" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="https://github.com/Davidsonity/Heart_Failure" class="image">
+									<a href="https://github.com/Davidsonity/HeartGuard" class="image">
 										<img src="https://user-images.githubusercontent.com/96771321/189802385-c30359f6-3a21-4aae-b105-4ab51bc30a19.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Heart Failure Classifier</h3>
+												<h3>HeartGuard</h3>
 											</header>
 											<p>
-												The Heart Failure Prediction project aims to develop a machine learning model for
+												The HeartGuard project aims to develop a machine learning model for
 												accurately predicting heart failure in patients. By analyzing a dataset of 299 patients'
 												medical records, including 13 clinical features, the project explores various ML algorithms
 												and techniques. The best-performing model is selected based on evaluation metrics like recall
@@ -120,19 +120,19 @@
 												decisions.
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/Heart_Failure" class="button">Learn more</a></li>
+												<li><a href="https://github.com/Davidsonity/HeartGuard" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="https://github.com/Davidsonity/House-Prices-Prediction" class="image">
+									<a href="https://github.com/Davidsonity/HomeValueQuest" class="image">
 										<img src="https://camo.githubusercontent.com/9de3e2baa949b4ecc71147533765e07ecfa33a58333aed57f57db765328ade4f/68747470733a2f2f73746f726167652e676f6f676c65617069732e636f6d2f6b6167676c652d636f6d7065746974696f6e732f6b6167676c652f353430372f6d656469612f686f7573657362616e6e65722e706e67" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>House Prices Prediction</h3>
+												<h3>HomeValueQuest</h3>
 											</header>
 											<p>
 												This project is a Kaggle competition focused on predicting the sales prices of
@@ -145,7 +145,7 @@
 												skills and gain experience in real-world predictive modeling.
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/House-Prices-Prediction" class="button">Learn more</a></li>
+												<li><a href="https://github.com/Davidsonity/HomeValueQuest" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
