--- a/landing3.html
+++ b/landing3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Emuejevoke's Supervised ML: Classification Portfolio</title>
+		<title>Emuejevoke's Computer Vision</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -45,13 +45,13 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Supervised ML: Classification</h1>
+								<h1>Computer Vision</h1>
 							</header>
 							<div class="content">
 								<p>
 									This section contains projects that focus on analyzing, preparing and
 									utilization of data with various machine learning algorithms and
-									neural networks to build classification models.
+									neural networks to build computer vision projects.
 								</p>
 							</div>
 						</div>
@@ -66,9 +66,8 @@
 									<header class="major">
 										<h2>Projects</h2>
 										<ul>
-											<li>Heart Failure Classifier</li>
-											<li>Nature Scene Classifier</li>
-											<li>Dog Breed Classifier</li>
+											<li>NatureVision</li>
+											<li>BreedSpotter</li>
 										</ul>
 									</header>
 								</div>
@@ -77,16 +76,16 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="https://github.com/Davidsonity/Nature-Scene-Classifier" class="image">
+									<a href="https://github.com/Davidsonity/NatureVision" class="image">
 										<img src="https://user-images.githubusercontent.com/96771321/214588217-b037c3e3-bbb3-4e52-9da7-3459cbdc27b4.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Nature Scene Classifier</h3>
+												<h3>NatureVision</h3>
 											</header>
 											<p>
-												The Nature Scene Classifier project utilizes transfer learning techniques to build a deep
+												The NatureVision project utilizes transfer learning techniques to build a deep
 												learning neural network for accurately classifying images of natural scenes. The project
 												evaluates three pre-trained models and achieves an overall accuracy of 95.65%. It focuses
 												on a dataset provided by Intel, which includes images of buildings, forests, glaciers,
@@ -96,22 +95,22 @@
 												and image organization.
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/Nature-Scene-Classifier" class="button">Learn more</a></li>
+												<li><a href="https://github.com/Davidsonity/NatureVision" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="https://github.com/Davidsonity/DogBreed-Classifier" class="image">
+									<a href="https://github.com/Davidsonity/BreedSpotter" class="image">
 										<img src="https://user-images.githubusercontent.com/96771321/214430950-66cc8641-b309-4de1-8a8f-7a568f69910c.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Dog Breed Classifier</h3>
+												<h3>BreedSpotter</h3>
 											</header>
 											<p>
-												The Dog Breed Prediction project utilizes deep learning techniques and transfer
+												The BreedSpotter project utilizes deep learning techniques and transfer
 												learning to accurately classify dog breeds. By leveraging the Xception model and
 												a comprehensive dataset of dog images, the project aims to develop a powerful
 												neural network capable of identifying the top 10 most populated dog breeds with
@@ -119,7 +118,7 @@
 												images and receive real-time predictions of the respective breed.
 											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/Davidsonity/DogBreed-Classifier" class="button">Learn more</a></li>
+												<li><a href="https://github.com/Davidsonity/BreedSpotter" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
