--- a/landing6.html
+++ b/landing6.html
@@ -84,21 +84,14 @@
 												<h3>Football Fixtures Scraper</h3>
 											</header>
 											<p>
-												The objective of this project is to build a web scraper to get the next
-												and previous 5 fixtures of a team. The data was scraped from
-												<a href="https://ng.soccerway.com/" >ng.soccerway.com</a>
-												<br>Click
-												<b>
-												<a href="https://davidsonity-football-fixtures-scraper-scraper-dguwss.streamlit.app/" >Here</a>
-												</b>to interact with deployment site.
-											<br>Some libraries used in this project includes:
+												The Football Fixtures Scraper is a web application deployed using Streamlit.
+												It allows users to fetch and analyze football match fixtures for a specific team
+												and league from the Soccerway website. Users can enter the team name and league,
+												and the application provides the last five and next five match fixtures in an
+												organized format. The tool offers a user-friendly interface for easy access and
+												interaction, making it a convenient solution to stay updated with upcoming football
+												fixtures for any chosen team and league.
 											</p>
-											<ul>
-												<li>Pandas</li>
-												<li>Requests</li>
-												<li>BeautifulSoup4</li>
-												<li>Streamlit</li>
-											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/Davidsonity/Football_Fixtures-Scraper" class="button">Learn more</a></li>
 											</ul>
