--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
+										<h3><a href="landing7.html" class="link">Time Series Forcasting</a></h3>
+										<p>Climate TempTrend Hub</p>
+										<p>India Unemployment Rate</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic05.jpg" alt="" />
+									</span>
+									<header class="major">
 										<h3><a href="landing5.html" class="link">Recommendation System</a></h3>
 										<p>MovieLens Recommender+</p>
 										<p>FoodieFinders</p>
