--- a/index.html
+++ b/index.html
@@ -106,10 +106,19 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing6.html" class="link">Web Scraping | Clustering</a></h3>
+										<h3><a href="landing8.html" class="link">Clustering (Unsupervised ML)</a></h3>
+										<p>Customer Segmentation</p>
+										<p>Gender By Voice (Clustering)</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/pic06.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing6.html" class="link">Web Scraping</a></h3>
 										<p>Football Fixtures Scraper</p>
 										<p>Nike Web Scraper</p>
-										<p>Gender By Voice (Clustering)</p>
 									</header>
 								</article>
 								<article>
