--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Emuejevoke Eshemitan</h1>
-								<h2>Data Scientist | ML Engineer</h2>
+								<h1>Hi, I'm Emuejevoke Eshemitan</h1>
+								<h2>Professional Data Scientist | ML Engineer</h2>
 							</header>
 							<div class="content">
-								<p>
-									Hi, Welcome to Emuejevoke's Portfolio website
+								<p>									
+									I build machine learning projects for companies and individuals
 								</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Explore</a></li>
@@ -126,7 +126,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Data Analysis | SQL</a></h3>
+										<h3><a href="landing.html" class="link">Data Analysis</a></h3>
 										<p>WeRateDogs</p>
 										<p>Ford GoBike</p>
 										<p>Chicago-Data-Insights</p>
@@ -152,18 +152,16 @@
 										<h2>About Me</h2>
 									</header>
 									<p>
-										Hello, I'm Emuejevoke Eshemitan, a passionate data professional specializing in Machine
-										Learning Engineering and Data Science. My portfolio showcases projects reflecting my
-										dedication to leveraging data for insightful and innovative solutions.
+										Hello, I'm Emuejevoke Eshemitan, a passionate Machine Learning Engineer and 
+										Data Scientist dedicated to empowering students, individuals, and companies to 
+										build and deploy impactful machine learning projects.
 										<br>
-										As a Machine Learning Engineer, I excel in designing cutting-edge models using TensorFlow and
-										scikit-learn, building scalable data pipelines, and deploying them in production
-										environments.
+										With expertise in crafting state-of-the-art models, designing scalable data pipelines, 
+										and deploying solutions into production, I strive to make AI accessible and 
+										transformative for all. Beyond the technical, I am deeply committed to contributing 
+										to the AI community and leveraging the power of machine learning to create meaningful global impact.
 										<br>
-										As a Data Scientist, I analyze valuable patterns, develop predictive
-										models, and communicate insights through impactful visualizations.
-										<br>
-										Let's collaborate on a data-driven journey! Explore my portfolio for more.
+										Let’s shape the future together with AI! Explore my portfolio to see how we can bring your ideas to life.										
 									</p>
 									<ul class="actions">
 										<li><a href="author.html" class="button next">more about me</a></li>
