--- a/landing4.html
+++ b/landing4.html
@@ -45,11 +45,12 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Natural Language Processing</h1>
+								<h1>Large Language Models (LLMs) / Natural Language Processing (NLP)</h1>
 							</header>
 							<div class="content">
 								<p>
-									This section contains projects that involve Natural Language Processing.
+									This section contains projects that involves Large Language Models (LLMs) 
+									& Natural Language Processing (NLP).
 								</p>
 							</div>
 						</div>
@@ -64,8 +65,9 @@
 									<header class="major">
 										<h2>Projects</h2>
 										<ul>
-											<li>InfoBot (SonityAI Chatbot)</li>
+											<li>Mitan Energy AI Chatbot</li>
 											<li>Sentistranger (Sentiment Analysis)</li>
+											<li>InfoBot (SonityAI Chatbot)</li>
 										</ul>
 									</header>
 								</div>
@@ -73,6 +75,53 @@
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
+								<section>
+									<a href="https://github.com/Davidsonity/MITAN_ENERGY" class="image">
+										<img src="https://camo.githubusercontent.com/3a3fc5bc49c504f5e7a339e7ed8017f359e53ab05488e47a9351898502c759f7/68747470733a2f2f6d656469612e67697068792e636f6d2f6d656469612f6c34315939534b726c336b4c56616d66432f67697068792e676966" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Mitan Energy AI Chatbot</h3>
+											</header>
+											<p>
+												The Mitan Energy AI Chatbot is an interactive, AI-powered assistant designed 
+												to provide insights and information about Mitan Energy Company Ltd. It leverages 
+												state-of-the-art natural language processing (NLP) and retrieval-based models to 
+												deliver concise, accurate, and meaningful responses.
+												This chatbot integrates tools such as LangGraph, Google Generative AI APIs, and 
+												LangChain to load, retrieve, and process company-related documents. It is deployed 
+												on Streamlit for a user-friendly web interface.
+											</p>
+											<ul class="actions">
+												<li><a href="https://github.com/Davidsonity/MITAN_ENERGY" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<a href="https://github.com/Davidsonity/Sentiment-Analysis-StrangerThingsS4" class="image">
+										<img src="https://camo.githubusercontent.com/3a3fc5bc49c504f5e7a339e7ed8017f359e53ab05488e47a9351898502c759f7/68747470733a2f2f6d656469612e67697068792e636f6d2f6d656469612f6c34315939534b726c336b4c56616d66432f67697068792e676966" alt="" data-position="top center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>Sentistranger (Sentiment Analysis)</h3>
+											</header>
+											<p>
+												The project performs sentiment analysis on Twitter data related to the Netflix series
+												"Stranger Things." It uses webscraping to collects 50,000 recent tweets from the release
+												of Season 4's first half to the complete series release. Using the Transformers library
+												and Twitter-RoBERTa model, the sentiment of these tweets is analyzed. The Jupyter
+												Notebook guides users through the process and includes visualizations for insights. The
+												repository contains data, images, and a README file with setup instructions.
+											</p>
+											<ul class="actions">
+												<li><a href="https://medium.com/@davidsonity/sentistranger-sentiment-analysis-twitter-reactions-to-stranger-things-season-4-95d81cbd6cce" class="button">Learn more</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
 								<section>
 									<a href="https://github.com/Davidsonity/SonityAI-InfoBotApp/tree/main" class="image">
 										<img src="https://user-images.githubusercontent.com/96771321/252466661-1642a2c3-0d80-4c67-bd47-9721548d5b20.png" alt="" data-position="center center" />
@@ -93,29 +142,6 @@
 											</p>
 											<ul class="actions">
 												<li><a href="https://medium.com/@davidsonity/introducing-infobot-your-personal-information-assistant-a9fb8cb7da71" class="button">Learn more</a></li>
-											</ul>
-										</div>
-									</div>
-								</section>
-								<section>
-									<a href="https://github.com/Davidsonity/Sentiment-Analysis-StrangerThingsS4" class="image">
-										<img src="https://camo.githubusercontent.com/e3aa527e5cd5078d60d479f80dcbb67cc3066f1a66519aca57be5a55b47bb8dc/68747470733a2f2f36362e6d656469612e74756d626c722e636f6d2f34363461353739646439636233326261316535353839326661643738336634622f74756d626c725f6f627975336f47774f633171616975696a6f315f3430302e676966" alt="" data-position="top center" />
-									</a>
-									<div class="content">
-										<div class="inner">
-											<header class="major">
-												<h3>Sentistranger (Sentiment Analysis)</h3>
-											</header>
-											<p>
-												The project performs sentiment analysis on Twitter data related to the Netflix series
-												"Stranger Things." It uses webscraping to collects 50,000 recent tweets from the release
-												of Season 4's first half to the complete series release. Using the Transformers library
-												and Twitter-RoBERTa model, the sentiment of these tweets is analyzed. The Jupyter
-												Notebook guides users through the process and includes visualizations for insights. The
-												repository contains data, images, and a README file with setup instructions.
-											</p>
-											<ul class="actions">
-												<li><a href="https://medium.com/@davidsonity/sentistranger-sentiment-analysis-twitter-reactions-to-stranger-things-season-4-95d81cbd6cce" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
