--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing4.html" class="link">Natural Language Processing</a></h3>
+										<h3><a href="landing4.html" class="link">My LLM | NLP Projects</a></h3>
+										<p>Mitan Energy AI Chatbot</p>
 										<p>InfoBot (Sonity AI Chatbot)</p>
 										<p>Sentistranger (Sentiment Analysis)</p>
 									</header>
