--- a/generic4.html
+++ b/generic4.html
@@ -19,25 +19,22 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Emuejevoke</strong> <span>Eshemitan</span></a>
+						<a href="landing4.html" class="logo"><strong>Emuejevoke</strong> <span>Eshemitan</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
-					</nav>
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+					<ul class="actions stacked">
+						<li><a href="author.html" class="button primary fit">About Me</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
 					<div id="main" class="alt">
